--- a/angular.json
+++ b/angular.json
@@ -13,8 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref":"/",
-            "outputPath": "dist/web-dart-games/",
+            "baseHref":"https://rehne93.github.io/web-dart-games/",
+            "outputPath": "docs/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
